# EmWorld

./: .editorconfig  CMakeLists.txt  README.md
plugins/: CMakeLists.txt
plugins/videoPlayer/: CMakeLists.txt  VideoPlayer.qml  qml.qrc  videoplugin.cpp  videoplugin.h
src/: CMakeLists.txt  main.cpp  main.qml  plugininterface.h  pluginmanager.cpp  pluginmanager.h  qml.qrc
